[gd_scene load_steps=22 format=3 uid="uid://c1l5ndj6w6wqw"]

[ext_resource type="Script" uid="uid://cab3k5auv4mmh" path="res://assets/environment/furniture/computer.gd" id="1_nj7n0"]
[ext_resource type="PackedScene" uid="uid://b4kdyglt32tdp" path="res://assets/kaykit/furniture/monitor.gltf" id="1_qhrrk"]
[ext_resource type="Script" uid="uid://dlhtxd3ht16ki" path="res://assets/environment/furniture/computer_interactable.gd" id="2_xyefn"]
[ext_resource type="Texture2D" uid="uid://cmewmaxhmw3nr" path="res://assets/ui/Icon_Small_Blank_X.png" id="4_nj7n0"]
[ext_resource type="PackedScene" uid="uid://b5p2c8ul2we3e" path="res://assets/environment/furniture/store_item.tscn" id="5_0o7yv"]
[ext_resource type="Texture2D" uid="uid://b7kbm5o4mhdxm" path="res://assets/ui/Icon_Small_WhiteOutline_X.png" id="5_3wc7u"]
[ext_resource type="Texture2D" uid="uid://cepkh1qbco7i1" path="res://assets/ui/SlimSlider_Green_Pointer.png" id="6_nj7n0"]
[ext_resource type="Texture2D" uid="uid://w2fhara2gi5l" path="res://assets/ui/Icon_Small_Blank_Shop.png" id="6_vr0q3"]
[ext_resource type="Texture2D" uid="uid://d0chodaeyqqli" path="res://assets/ui/Icon_Small_WhiteOutline_Shop.png" id="7_nj7n0"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_6vl5r"]
data = PackedVector3Array(0.22999999, 0, 0.21, -0.22999999, 0.06, 0.21, 0.22999999, 0.06, 0.21, 0.22999999, 0, 0.21, -0.22999999, 0, 0.21, -0.22999999, 0.06, 0.21, 0.25, 0, -0.08, 0.25, 0.06, 0.19, 0.25, 0.06, -0.08, 0.25, 0, -0.08, 0.25, 0, 0.19, 0.25, 0.06, 0.19, 0.22999999, 0.08, -0.08, -0.22999999, 0.08, 0.19, -0.22999999, 0.08, -0.08, -0.22999999, 0.08, -0.08, 0.22999999, 0.06, -0.099999994, 0.22999999, 0.08, -0.08, -0.22999999, 0.08, -0.08, -0.22999999, 0.06, -0.099999994, 0.22999999, 0.06, -0.099999994, 0.22999999, 0.08, -0.08, 0.22999999, 0.08, 0.19, -0.22999999, 0.08, 0.19, 0.22999999, 0.08, 0.19, -0.22999999, 0.06, 0.21, -0.22999999, 0.08, 0.19, 0.22999999, 0.08, 0.19, 0.22999999, 0.06, 0.21, -0.22999999, 0.06, 0.21, -0.25, 0, 0.19, -0.25, 0.06, -0.08, -0.25, 0.06, 0.19, -0.25, 0, 0.19, -0.25, 0, -0.08, -0.25, 0.06, -0.08, -0.22999999, 0, -0.099999994, 0.22999999, 0.06, -0.099999994, -0.22999999, 0.06, -0.099999994, -0.22999999, 0, -0.099999994, 0.22999999, 0, -0.099999994, 0.22999999, 0.06, -0.099999994, -0.22999999, 0.06, 0.21, -0.25, 0.06, 0.19, -0.22999999, 0.08, 0.19, -0.22999999, 0.08, 0.19, -0.25, 0.06, 0.19, -0.25, 0.06, -0.08, -0.22999999, 0.08, 0.19, -0.25, 0.06, -0.08, -0.22999999, 0.08, -0.08, -0.22999999, 0.08, -0.08, -0.25, 0.06, -0.08, -0.22999999, 0.06, -0.099999994, 0.22999999, 0.08, 0.19, 0.25, 0.06, 0.19, 0.22999999, 0.06, 0.21, 0.22999999, 0.08, -0.08, 0.25, 0.06, 0.19, 0.22999999, 0.08, 0.19, 0.22999999, 0.08, -0.08, 0.25, 0.06, -0.08, 0.25, 0.06, 0.19, 0.22999999, 0.08, -0.08, 0.22999999, 0.06, -0.099999994, 0.25, 0.06, -0.08, -0.22999999, 0, 0.21, -0.25, 0.06, 0.19, -0.22999999, 0.06, 0.21, -0.22999999, 0, 0.21, -0.25, 0, 0.19, -0.25, 0.06, 0.19, -0.22999999, 0.06, -0.099999994, -0.25, 0, -0.08, -0.22999999, 0, -0.099999994, -0.22999999, 0.06, -0.099999994, -0.25, 0.06, -0.08, -0.25, 0, -0.08, 0.25, 0.06, -0.08, 0.22999999, 0, -0.099999994, 0.25, 0, -0.08, 0.25, 0.06, -0.08, 0.22999999, 0.06, -0.099999994, 0.22999999, 0, -0.099999994, 0.22999999, 0.06, 0.21, 0.25, 0, 0.19, 0.22999999, 0, 0.21, 0.22999999, 0.06, 0.21, 0.25, 0.06, 0.19, 0.25, 0, 0.19, -0.2261, 0, -0.0761, 0.2261, 0, 0.18609999, 0.2261, 0, -0.0761, 0.2261, 0, 0.18609999, 0.25, 0, -0.08, 0.2261, 0, -0.0761, 0.2261, 0, -0.0761, 0.25, 0, -0.08, 0.22999999, 0, -0.099999994, 0.2261, 0, 0.18609999, 0.25, 0, 0.19, 0.25, 0, -0.08, 0.2261, 0, -0.0761, 0.22999999, 0, -0.099999994, -0.22999999, 0, -0.099999994, 0.2261, 0, -0.0761, -0.22999999, 0, -0.099999994, -0.2261, 0, -0.0761, -0.2261, 0, -0.0761, -0.22999999, 0, -0.099999994, -0.25, 0, -0.08, 0.2261, 0, 0.18609999, 0.22999999, 0, 0.21, 0.25, 0, 0.19, -0.2261, 0, -0.0761, -0.25, 0, -0.08, -0.25, 0, 0.19, -0.2261, 0, 0.18609999, 0.22999999, 0, 0.21, 0.2261, 0, 0.18609999, -0.2261, 0, -0.0761, -0.2261, 0, 0.18609999, 0.2261, 0, 0.18609999, -0.2261, 0, -0.0761, -0.25, 0, 0.19, -0.2261, 0, 0.18609999, -0.2261, 0, 0.18609999, -0.22999999, 0, 0.21, 0.22999999, 0, 0.21, -0.2261, 0, 0.18609999, -0.25, 0, 0.19, -0.22999999, 0, 0.21, 0.7326, 0.2131, 0.1161, -0.7326, 1.0652, -0.034199998, -0.7326, 0.2131, 0.1161, 0.7326, 0.2131, 0.1161, 0.7326, 1.0652, -0.034199998, -0.7326, 1.0652, -0.034199998, -0.7326, 0.2131, 0.1161, 0.72999996, 0.1977, 0.12889999, 0.7326, 0.2131, 0.1161, 0.7326, 0.2131, 0.1161, 0.72999996, 0.1977, 0.12889999, 0.7441, 0.20349999, 0.12789999, -0.7326, 0.2131, 0.1161, -0.72999996, 0.1977, 0.12889999, 0.72999996, 0.1977, 0.12889999, -0.7326, 0.2131, 0.1161, -0.7441, 0.20349999, 0.12789999, -0.72999996, 0.1977, 0.12889999, 0.72999996, 1.0841, -0.0273, -0.72999996, 1.1014, 0.0711, -0.72999996, 1.0841, -0.0273, -0.72999996, 1.1014, 0.0711, -0.7441, 1.0783, -0.0263, -0.72999996, 1.0841, -0.0273, -0.72999996, 1.1014, 0.0711, -0.7441, 1.0956, 0.0722, -0.7441, 1.0783, -0.0263, 0.72999996, 1.0841, -0.0273, 0.72999996, 1.1014, 0.0711, -0.72999996, 1.1014, 0.0711, 0.72999996, 1.0841, -0.0273, 0.7441, 1.0956, 0.0722, 0.72999996, 1.1014, 0.0711, 0.72999996, 1.0841, -0.0273, 0.7441, 1.0783, -0.0263, 0.7441, 1.0956, 0.0722, -0.667, 0.2829, 0.2155, -0.75, 1.0817, 0.074599996, -0.667, 1.0336, 0.0831, -0.7441, 1.0956, 0.0722, -0.667, 1.0336, 0.0831, -0.75, 1.0817, 0.074599996, -0.667, 0.2829, 0.2155, -0.75, 0.2348, 0.22389999, -0.75, 1.0817, 0.074599996, -0.72999996, 1.1014, 0.0711, -0.667, 1.0336, 0.0831, -0.7441, 1.0956, 0.0722, -0.75, 0.2348, 0.22389999, -0.667, 0.2829, 0.2155, -0.7441, 0.2209, 0.22639999, -0.667, 1.0336, 0.0831, -0.72999996, 1.1014, 0.0711, 0.72999996, 1.1014, 0.0711, -0.7441, 0.2209, 0.22639999, -0.667, 0.2829, 0.2155, -0.72999996, 0.21509999, 0.22739999, -0.667, 1.0336, 0.0831, 0.72999996, 1.1014, 0.0711, 0.667, 1.0336, 0.0831, 0.7441, 1.0956, 0.0722, 0.667, 1.0336, 0.0831, 0.72999996, 1.1014, 0.0711, 0.75, 1.0817, 0.074599996, 0.667, 1.0336, 0.0831, 0.7441, 1.0956, 0.0722, 0.667, 1.0336, 0.0831, 0.75, 1.0817, 0.074599996, 0.75, 0.2348, 0.22389999, 0.667, 0.2829, 0.2155, -0.72999996, 0.21509999, 0.22739999, -0.667, 0.2829, 0.2155, 0.667, 1.0336, 0.0831, 0.75, 0.2348, 0.22389999, 0.667, 0.2829, 0.2155, 0.667, 0.2829, 0.2155, 0.72999996, 0.21509999, 0.22739999, -0.72999996, 0.21509999, 0.22739999, 0.7441, 0.2209, 0.22639999, 0.667, 0.2829, 0.2155, 0.75, 0.2348, 0.22389999, 0.72999996, 0.21509999, 0.22739999, 0.667, 0.2829, 0.2155, 0.7441, 0.2209, 0.22639999, -0.75, 0.2348, 0.22389999, -0.75, 1.0644, -0.023899999, -0.75, 1.0817, 0.074599996, -0.7441, 1.0956, 0.0722, -0.75, 1.0817, 0.074599996, -0.75, 1.0644, -0.023899999, -0.7441, 1.0956, 0.0722, -0.75, 1.0644, -0.023899999, -0.7441, 1.0783, -0.0263, -0.75, 0.2348, 0.22389999, -0.75, 0.2174, 0.1255, -0.75, 1.0644, -0.023899999, -0.7441, 0.20349999, 0.12789999, -0.75, 0.2174, 0.1255, -0.75, 0.2348, 0.22389999, -0.7441, 0.20349999, 0.12789999, -0.75, 0.2348, 0.22389999, -0.7441, 0.2209, 0.22639999, 0.75, 0.2174, 0.1255, 0.75, 1.0817, 0.074599996, 0.75, 1.0644, -0.023899999, 0.7441, 1.0783, -0.0263, 0.75, 1.0644, -0.023899999, 0.75, 1.0817, 0.074599996, 0.7441, 1.0783, -0.0263, 0.75, 1.0817, 0.074599996, 0.7441, 1.0956, 0.0722, 0.75, 0.2174, 0.1255, 0.75, 0.2348, 0.22389999, 0.75, 1.0817, 0.074599996, 0.7441, 0.2209, 0.22639999, 0.75, 0.2348, 0.22389999, 0.75, 0.2174, 0.1255, 0.7441, 0.2209, 0.22639999, 0.75, 0.2174, 0.1255, 0.7441, 0.20349999, 0.12789999, -0.667, 0.2829, 0.2155, 0.654, 0.2866, 0.1945, 0.667, 0.2829, 0.2155, -0.667, 0.2829, 0.2155, -0.654, 0.2866, 0.1945, 0.654, 0.2866, 0.1945, 0.654, 0.2866, 0.1945, -0.654, 1.023, 0.0647, 0.654, 1.023, 0.0647, 0.654, 0.2866, 0.1945, -0.654, 0.2866, 0.1945, -0.654, 1.023, 0.0647, -0.667, 1.0336, 0.0831, -0.654, 0.2866, 0.1945, -0.667, 0.2829, 0.2155, -0.667, 1.0336, 0.0831, -0.654, 1.023, 0.0647, -0.654, 0.2866, 0.1945, 0.667, 1.0336, 0.0831, -0.654, 1.023, 0.0647, -0.667, 1.0336, 0.0831, 0.667, 1.0336, 0.0831, 0.654, 1.023, 0.0647, -0.654, 1.023, 0.0647, 0.667, 0.2829, 0.2155, 0.654, 1.023, 0.0647, 0.667, 1.0336, 0.0831, 0.667, 0.2829, 0.2155, 0.654, 0.2866, 0.1945, 0.654, 1.023, 0.0647, -0.72999996, 0.1977, 0.12889999, -0.7441, 0.2209, 0.22639999, -0.72999996, 0.21509999, 0.22739999, -0.72999996, 0.1977, 0.12889999, -0.7441, 0.20349999, 0.12789999, -0.7441, 0.2209, 0.22639999, -0.72999996, 0.1977, 0.12889999, -0.72999996, 0.21509999, 0.22739999, 0.72999996, 0.21509999, 0.22739999, -0.72999996, 0.1977, 0.12889999, 0.72999996, 0.21509999, 0.22739999, 0.72999996, 0.1977, 0.12889999, 0.72999996, 0.21509999, 0.22739999, 0.7441, 0.20349999, 0.12789999, 0.72999996, 0.1977, 0.12889999, 0.72999996, 0.21509999, 0.22739999, 0.7441, 0.2209, 0.22639999, 0.7441, 0.20349999, 0.12789999, -0.7326, 0.2131, 0.1161, -0.75, 0.2174, 0.1255, -0.7441, 0.20349999, 0.12789999, -0.7326, 1.0652, -0.034199998, -0.75, 0.2174, 0.1255, -0.7326, 0.2131, 0.1161, -0.7326, 1.0652, -0.034199998, -0.75, 1.0644, -0.023899999, -0.75, 0.2174, 0.1255, -0.7326, 1.0652, -0.034199998, -0.7441, 1.0783, -0.0263, -0.75, 1.0644, -0.023899999, -0.7326, 1.0652, -0.034199998, -0.72999996, 1.0841, -0.0273, -0.7441, 1.0783, -0.0263, 0.7326, 1.0652, -0.034199998, -0.72999996, 1.0841, -0.0273, -0.7326, 1.0652, -0.034199998, 0.7326, 1.0652, -0.034199998, 0.72999996, 1.0841, -0.0273, -0.72999996, 1.0841, -0.0273, 0.7326, 1.0652, -0.034199998, 0.7441, 1.0783, -0.0263, 0.72999996, 1.0841, -0.0273, 0.7326, 0.2131, 0.1161, 0.7441, 0.20349999, 0.12789999, 0.75, 0.2174, 0.1255, 0.7326, 0.2131, 0.1161, 0.75, 0.2174, 0.1255, 0.75, 1.0644, -0.023899999, 0.7326, 0.2131, 0.1161, 0.75, 1.0644, -0.023899999, 0.7326, 1.0652, -0.034199998, 0.7326, 1.0652, -0.034199998, 0.75, 1.0644, -0.023899999, 0.7441, 1.0783, -0.0263, -0.08, 0.5233, -0.06, -0.099999994, 0.0733, -0.04, -0.08, 0.0733, -0.06, -0.08, 0.5233, -0.06, -0.099999994, 0.5233, -0.04, -0.099999994, 0.0733, -0.04, -0.099999994, 0.0733, 0.04, -0.099999994, 0.0733, -0.04, -0.099999994, 0.5233, -0.04, -0.099999994, 0.0733, 0.04, -0.099999994, 0.5233, -0.04, -0.099999994, 0.5233, 0.04, -0.08, 0.0733, 0.06, -0.099999994, 0.0733, 0.04, -0.099999994, 0.5233, 0.04, -0.08, 0.0733, 0.06, -0.099999994, 0.5233, 0.04, -0.08, 0.5233, 0.06, 0.099999994, 0.5233, -0.04, 0.08, 0.0733, -0.06, 0.099999994, 0.0733, -0.04, 0.099999994, 0.5233, -0.04, 0.08, 0.5233, -0.06, 0.08, 0.0733, -0.06, 0.099999994, 0.0733, -0.04, 0.099999994, 0.5233, 0.04, 0.099999994, 0.5233, -0.04, 0.099999994, 0.0733, -0.04, 0.099999994, 0.0733, 0.04, 0.099999994, 0.5233, 0.04, 0.08, 0.5233, 0.06, 0.099999994, 0.5233, 0.04, 0.099999994, 0.0733, 0.04, 0.08, 0.5233, 0.06, 0.099999994, 0.0733, 0.04, 0.08, 0.0733, 0.06, 0.08, 0.0733, 0.06, -0.08, 0.5233, 0.06, 0.08, 0.5233, 0.06, 0.08, 0.0733, 0.06, -0.08, 0.0733, 0.06, -0.08, 0.5233, 0.06, -0.08, 0.0733, -0.06, 0.08, 0.5233, -0.06, -0.08, 0.5233, -0.06, -0.08, 0.0733, -0.06, 0.08, 0.0733, -0.06, 0.08, 0.5233, -0.06, 0.0687, 0.5433, -0.0287, -0.0687, 0.5433, 0.0287, -0.0687, 0.5433, -0.0287, -0.0687, 0.5433, 0.0287, -0.08, 0.5433, -0.0317, -0.0687, 0.5433, -0.0287, -0.0687, 0.5433, 0.0287, -0.08, 0.5433, 0.0317, -0.08, 0.5433, -0.0317, -0.0687, 0.5433, -0.0287, -0.08, 0.5433, -0.0317, -0.0717, 0.5433, -0.04, -0.0687, 0.5433, 0.0287, -0.0717, 0.5433, 0.04, -0.08, 0.5433, 0.0317, -0.0687, 0.5433, -0.0287, -0.0717, 0.5433, -0.04, 0.0717, 0.5433, -0.04, -0.0687, 0.5433, -0.0287, 0.0717, 0.5433, -0.04, 0.0687, 0.5433, -0.0287, 0.08, 0.5233, -0.06, 0.0717, 0.5433, -0.04, -0.0717, 0.5433, -0.04, 0.08, 0.5233, -0.06, -0.0717, 0.5433, -0.04, -0.08, 0.5233, -0.06, 0.0687, 0.5433, -0.0287, 0.0717, 0.5433, -0.04, 0.08, 0.5433, -0.0317, 0.0687, 0.5433, -0.0287, 0.08, 0.5433, -0.0317, 0.08, 0.5433, 0.0317, 0.0687, 0.5433, -0.0287, 0.0687, 0.5433, 0.0287, -0.0687, 0.5433, 0.0287, 0.0687, 0.5433, -0.0287, 0.08, 0.5433, 0.0317, 0.0687, 0.5433, 0.0287, 0.0687, 0.5433, 0.0287, -0.0717, 0.5433, 0.04, -0.0687, 0.5433, 0.0287, 0.0687, 0.5433, 0.0287, 0.08, 0.5433, 0.0317, 0.0717, 0.5433, 0.04, 0.0687, 0.5433, 0.0287, 0.0717, 0.5433, 0.04, -0.0717, 0.5433, 0.04, 0.0717, 0.5433, 0.04, -0.08, 0.5233, 0.06, -0.0717, 0.5433, 0.04, 0.0717, 0.5433, 0.04, 0.08, 0.5233, 0.06, -0.08, 0.5233, 0.06, -0.0717, 0.5433, 0.04, -0.099999994, 0.5233, 0.04, -0.08, 0.5433, 0.0317, -0.0717, 0.5433, 0.04, -0.08, 0.5233, 0.06, -0.099999994, 0.5233, 0.04, -0.08, 0.5433, 0.0317, -0.099999994, 0.5233, 0.04, -0.099999994, 0.5233, -0.04, -0.08, 0.5433, 0.0317, -0.099999994, 0.5233, -0.04, -0.08, 0.5433, -0.0317, -0.08, 0.5433, -0.0317, -0.099999994, 0.5233, -0.04, -0.08, 0.5233, -0.06, -0.08, 0.5433, -0.0317, -0.08, 0.5233, -0.06, -0.0717, 0.5433, -0.04, 0.0717, 0.5433, -0.04, 0.099999994, 0.5233, -0.04, 0.08, 0.5433, -0.0317, 0.0717, 0.5433, -0.04, 0.08, 0.5233, -0.06, 0.099999994, 0.5233, -0.04, 0.099999994, 0.5233, 0.04, 0.08, 0.5433, -0.0317, 0.099999994, 0.5233, -0.04, 0.099999994, 0.5233, 0.04, 0.08, 0.5433, 0.0317, 0.08, 0.5433, -0.0317, 0.08, 0.5433, 0.0317, 0.099999994, 0.5233, 0.04, 0.08, 0.5233, 0.06, 0.08, 0.5433, 0.0317, 0.08, 0.5233, 0.06, 0.0717, 0.5433, 0.04, 0.62799996, 0.2472, 0.2329, 0.6242, 0.26659998, 0.2129, 0.62799996, 0.2656, 0.2296, 0.62799996, 0.2472, 0.2329, 0.6242, 0.24059999, 0.2175, 0.6242, 0.26659998, 0.2129, 0.6856, 0.24059999, 0.2175, 0.6818, 0.2656, 0.2296, 0.6856, 0.26659998, 0.2129, 0.6856, 0.24059999, 0.2175, 0.6818, 0.2472, 0.2329, 0.6818, 0.2656, 0.2296, 0.6818, 0.2472, 0.2329, 0.62799996, 0.2656, 0.2296, 0.6818, 0.2656, 0.2296, 0.6818, 0.2472, 0.2329, 0.62799996, 0.2472, 0.2329, 0.62799996, 0.2656, 0.2296, 0.6242, 0.24059999, 0.2175, 0.6818, 0.2472, 0.2329, 0.6856, 0.24059999, 0.2175, 0.6242, 0.24059999, 0.2175, 0.62799996, 0.2472, 0.2329, 0.6818, 0.2472, 0.2329, 0.6856, 0.26659998, 0.2129, 0.62799996, 0.2656, 0.2296, 0.6242, 0.26659998, 0.2129, 0.6856, 0.26659998, 0.2129, 0.6818, 0.2656, 0.2296, 0.62799996, 0.2656, 0.2296)

[sub_resource type="ViewportTexture" id="ViewportTexture_qhrrk"]
viewport_path = NodePath("SubViewportContainer/SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6vl5r"]
resource_local_to_scene = true
transparency = 1
albedo_texture = SubResource("ViewportTexture_qhrrk")

[sub_resource type="SphereShape3D" id="SphereShape3D_kldnb"]
radius = 1.9860924

[sub_resource type="LabelSettings" id="LabelSettings_qhrrk"]
font_size = 32
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 3

[sub_resource type="LabelSettings" id="LabelSettings_nj7n0"]
font_size = 24
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3wc7u"]
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_eg7ia"]
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_tp6c8"]
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_pxnma"]
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3u46q"]
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_urjbb"]
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="Computer" type="Node3D" node_paths=PackedStringArray("sub_viewport", "computer_camera", "cart_total_label", "cart_vbox", "cart_items", "total_price_label", "remaining_money_label", "balance_label")]
script = ExtResource("1_nj7n0")
sub_viewport = NodePath("SubViewportContainer")
computer_camera = NodePath("Camera3D")
cart_total_label = NodePath("SubViewportContainer/SubViewport/Control/CartPanel/CartTotal")
cart_vbox = NodePath("SubViewportContainer/SubViewport/Control/CartItems/ScrollContainer/CartVBox")
cart_items = NodePath("SubViewportContainer/SubViewport/Control/CartItems")
total_price_label = NodePath("SubViewportContainer/SubViewport/Control/CartItems/TotalPrice")
remaining_money_label = NodePath("SubViewportContainer/SubViewport/Control/CartItems/RemainingMoney")
balance_label = NodePath("SubViewportContainer/SubViewport/Control/CartItems/Balance")

[node name="monitor" parent="." instance=ExtResource("1_qhrrk")]

[node name="StaticBody3D" type="StaticBody3D" parent="monitor/monitor" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="monitor/monitor/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_6vl5r")

[node name="Interactable" type="Node3D" parent="monitor/monitor/StaticBody3D" node_paths=PackedStringArray("computer")]
script = ExtResource("2_xyefn")
computer = NodePath("../../../..")

[node name="CSGBox3D" type="CSGBox3D" parent="monitor/monitor" index="1"]
transform = Transform3D(-1, 1.6540238e-08, 8.584383e-08, 0, 0.98193896, -0.18919826, -8.742278e-08, -0.18919826, -0.98193896, 0.0013427793, 0.6564952, 0.14626233)
flip_faces = true
size = Vector3(1.2990723, 0.74642944, 0)
material = SubResource("StandardMaterial3D_6vl5r")

[node name="Area3D" type="Area3D" parent="monitor/monitor" index="2"]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="monitor/monitor/Area3D"]
shape = SubResource("SphereShape3D_kldnb")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_right = 512.0
offset_bottom = 512.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Control" type="Control" parent="SubViewportContainer/SubViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="SubViewportContainer/SubViewport/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -51.0
offset_right = 51.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="Title" type="Label" parent="SubViewportContainer/SubViewport/Control/MarginContainer"]
layout_mode = 2
text = "Order Screen"
label_settings = SubResource("LabelSettings_qhrrk")

[node name="MarginContainer2" type="MarginContainer" parent="SubViewportContainer/SubViewport/Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.040000003
anchor_bottom = 0.07300001
offset_right = -0.08000183
offset_bottom = -0.09347916
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="HomeButton" type="TextureButton" parent="SubViewportContainer/SubViewport/Control/MarginContainer2"]
layout_mode = 2
texture_normal = ExtResource("4_nj7n0")
texture_hover = ExtResource("5_3wc7u")
ignore_texture_size = true
stretch_mode = 5

[node name="CartPanel" type="Panel" parent="SubViewportContainer/SubViewport/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.832
anchor_top = 0.15900001
anchor_right = 0.97700006
anchor_bottom = 0.22100002
offset_left = -0.46398926
offset_top = -0.03200531
offset_right = 0.49597168
offset_bottom = -0.20800781
grow_horizontal = 0
grow_vertical = 0

[node name="ColorRect" type="ColorRect" parent="SubViewportContainer/SubViewport/Control/CartPanel"]
layout_mode = 0
offset_right = 168.0
offset_bottom = 40.0
color = Color(0.3254902, 0.3254902, 0.3254902, 0.4509804)

[node name="CartButton" type="TextureButton" parent="SubViewportContainer/SubViewport/Control/CartPanel"]
layout_mode = 0
offset_left = 127.0
offset_right = 167.0
offset_bottom = 40.0
texture_normal = ExtResource("6_vr0q3")
texture_hover = ExtResource("7_nj7n0")
ignore_texture_size = true
stretch_mode = 5

[node name="CartTotal" type="Label" parent="SubViewportContainer/SubViewport/Control/CartPanel"]
layout_mode = 0
offset_right = 77.0
offset_bottom = 39.0
text = "$10"
label_settings = SubResource("LabelSettings_nj7n0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CartItems" type="Panel" parent="SubViewportContainer/SubViewport/Control"]
layout_mode = 0
offset_left = 852.0
offset_top = 166.0
offset_right = 1137.0
offset_bottom = 512.0

[node name="Label" type="Label" parent="SubViewportContainer/SubViewport/Control/CartItems"]
layout_mode = 0
offset_left = 60.0
offset_top = 2.0
offset_right = 172.0
offset_bottom = 25.0
text = "Cart Summary"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="SubViewportContainer/SubViewport/Control/CartItems"]
layout_mode = 0
offset_left = 20.0
offset_top = 26.0
offset_right = 150.0
offset_bottom = 283.0

[node name="CartVBox" type="VBoxContainer" parent="SubViewportContainer/SubViewport/Control/CartItems/ScrollContainer"]
layout_mode = 2

[node name="BalanceLabel" type="Label" parent="SubViewportContainer/SubViewport/Control/CartItems"]
layout_mode = 0
offset_left = 52.0
offset_top = 194.0
offset_right = 113.0
offset_bottom = 217.0
text = "Balance"
label_settings = SubResource("LabelSettings_3wc7u")

[node name="Balance" type="Label" parent="SubViewportContainer/SubViewport/Control/CartItems"]
layout_mode = 0
offset_left = 188.0
offset_top = 194.0
offset_right = 234.0
offset_bottom = 217.0
text = "$1000"
label_settings = SubResource("LabelSettings_eg7ia")

[node name="TotalLabel" type="Label" parent="SubViewportContainer/SubViewport/Control/CartItems"]
layout_mode = 0
offset_left = 52.0
offset_top = 218.0
offset_right = 92.0
offset_bottom = 241.0
text = "Total"
label_settings = SubResource("LabelSettings_tp6c8")

[node name="TotalPrice" type="Label" parent="SubViewportContainer/SubViewport/Control/CartItems"]
layout_mode = 0
offset_left = 188.0
offset_top = 218.0
offset_right = 234.0
offset_bottom = 241.0
text = "$1000"
label_settings = SubResource("LabelSettings_pxnma")

[node name="RemainingLabel" type="Label" parent="SubViewportContainer/SubViewport/Control/CartItems"]
layout_mode = 0
offset_left = 52.0
offset_top = 242.0
offset_right = 135.0
offset_bottom = 265.0
text = "Remaining"
label_settings = SubResource("LabelSettings_3u46q")

[node name="RemainingMoney" type="Label" parent="SubViewportContainer/SubViewport/Control/CartItems"]
layout_mode = 0
offset_left = 188.0
offset_top = 242.0
offset_right = 228.0
offset_bottom = 265.0
text = "$2000"
label_settings = SubResource("LabelSettings_urjbb")

[node name="PurchaseButton" type="Button" parent="SubViewportContainer/SubViewport/Control/CartItems"]
layout_mode = 0
offset_left = 108.0
offset_top = 290.0
offset_right = 188.0
offset_bottom = 321.0
text = "Purchase"

[node name="ScrollContainer" type="ScrollContainer" parent="SubViewportContainer/SubViewport/Control"]
layout_mode = 1
offset_left = 67.0
offset_top = 99.0
offset_right = 817.0
offset_bottom = 592.0

[node name="VBoxContainer" type="VBoxContainer" parent="SubViewportContainer/SubViewport/Control/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 125

[node name="HBoxContainer" type="HBoxContainer" parent="SubViewportContainer/SubViewport/Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 375

[node name="RollingPin" parent="SubViewportContainer/SubViewport/Control/ScrollContainer/VBoxContainer/HBoxContainer" node_paths=PackedStringArray("computer") instance=ExtResource("5_0o7yv")]
layout_mode = 2
computer = NodePath("../../../../../../..")
text = &"Rolling Pin"
texture = ExtResource("6_nj7n0")
store_item = 1

[node name="Dough" parent="SubViewportContainer/SubViewport/Control/ScrollContainer/VBoxContainer/HBoxContainer" node_paths=PackedStringArray("computer") instance=ExtResource("5_0o7yv")]
layout_mode = 2
computer = NodePath("../../../../../../..")
text = &"Dough"
texture = ExtResource("6_nj7n0")
store_item = 2
price = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="SubViewportContainer/SubViewport/Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 375

[node name="Tomato" parent="SubViewportContainer/SubViewport/Control/ScrollContainer/VBoxContainer/HBoxContainer2" node_paths=PackedStringArray("computer") instance=ExtResource("5_0o7yv")]
layout_mode = 2
computer = NodePath("../../../../../../..")
text = &"Tomato"
texture = ExtResource("6_nj7n0")
store_item = 3
price = 10

[node name="Cheese" parent="SubViewportContainer/SubViewport/Control/ScrollContainer/VBoxContainer/HBoxContainer2" node_paths=PackedStringArray("computer") instance=ExtResource("5_0o7yv")]
layout_mode = 2
computer = NodePath("../../../../../../..")
text = &"Cheese"
texture = ExtResource("6_nj7n0")
store_item = 4
price = 10

[node name="HBoxContainer3" type="HBoxContainer" parent="SubViewportContainer/SubViewport/Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 375

[node name="Pepperoni" parent="SubViewportContainer/SubViewport/Control/ScrollContainer/VBoxContainer/HBoxContainer3" node_paths=PackedStringArray("computer") instance=ExtResource("5_0o7yv")]
layout_mode = 2
computer = NodePath("../../../../../../..")
text = &"Pepperoni"
texture = ExtResource("6_nj7n0")
store_item = 5
price = 10

[node name="Mushroom" parent="SubViewportContainer/SubViewport/Control/ScrollContainer/VBoxContainer/HBoxContainer3" node_paths=PackedStringArray("computer") instance=ExtResource("5_0o7yv")]
layout_mode = 2
computer = NodePath("../../../../../../..")
text = &"Mushroom"
texture = ExtResource("6_nj7n0")
store_item = 6
price = 10

[node name="Control" type="Control" parent="SubViewportContainer/SubViewport/Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.9779183, 0.20898712, 0, -0.20898712, 0.9779183, 0, 0.7762244, 0.64537793)

[connection signal="body_entered" from="monitor/monitor/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="monitor/monitor/Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="pressed" from="SubViewportContainer/SubViewport/Control/MarginContainer2/HomeButton" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="SubViewportContainer/SubViewport/Control/CartPanel/CartButton" to="." method="_on_cart_button_pressed"]
[connection signal="pressed" from="SubViewportContainer/SubViewport/Control/CartItems/PurchaseButton" to="." method="_on_purchase_button_pressed"]

[editable path="monitor"]
